11/1/2011 Changed from SimSharingProperty to track UI control changes, see #3136
10/16/2011 Extracted SensorNode superclass from VelocitySensorNode for reuse in plate-tectonics
10/13/2011 Changed color in thermometer node to be the color-blind-friendly version of red.
10/10/2011 Renamed "allowed" parameter to "enabled" in faucet classes
10/6/2011 Added an invisible rectangle around the positions where the knob could be to improve layouts based on full bounds of the slider
9/16/2011 Gray out the kit button nodes instead of making them invisible
9/16/2011 Added a constructor to KitSelectionNode that allows specification of the forward/back button colors
9/16/2011 Added ColorScheme to arrow button node
9/16/2011 ArrowButtonNode minor formatting changes
9/14/2011 Copied ArrowButtonNode to piccolo-phet from molecule-shapes, added border to show up against white background and made default button for kits
9/11/2011 Fixed exception caused by small arrows in VelocitySensorNode
9/8/2011 Added FaucetNode flag to indicate whether the user has to hold down the knob to maintain a flow rate
9/8/2011 Made kit selection buttons look more button-like, resolves #3064
9/7/2011 Reverted changes to CursorHandler, resolves #3061
9/6/2011 Factored out RelativeDragHandler.setModelPosition to improve support for fluid-pressure-and-flow
9/5/2011 Added support for changing the cursor in CursorHandler, see #3061
9/1/2011 Made RulerNode.createTickMark non-static and protected for sim-specific overrides, resolves #3052
8/31/2011 Moved sugar-and-salt-solutions faucet to piccolo-phet
8/9/2011 Improved support for title in KitSelectionNode
8/9/2011 Fixes for ZeroOffsetNode and added Kit titles in KitSelectionNode
8/8/2011 Renamed StandardizedNode to ZeroOffsetNode
8/8/2011 Moved kit implementations to piccolo-phet
8/4/2011 Only show the "clear" button if the client requested it
8/2/2011 Renamed parameter and added docs to FloatingClockControlNode